# learnings

./: pyproject.toml
.github/workflows/: daily.yml
curriculums/: film-photography.yaml  microeconomics.yaml  ms-102.yaml  wisdom.yaml  writing.yaml
knowledge_os/: __main__.py  engine.py  openai_client.py  planner.py  progress.py  prompt.py  renderer.py  storage.py
output/: Day001.json  Day001.txt  latest.json  latest.txt
output/archive/: Day001.json  Day001.txt  Day002.json  Day002.txt  Day003.json  Day003.txt  Day004.json  Day004.txt  Day005.json  Day005.txt  Day006.json  Day006.txt  Day007.json  Day007.txt  Day008.json  Day008.txt  Day009.json  Day009.txt  Day010.json  Day010.txt  Day011.json  Day011.txt  Day012.json  Day012.txt  Day013.json  Day013.txt  Day014.json  Day014.txt  Day015.json  Day015.txt  Day016.json  Day016.txt  Day017.json  Day017.txt  Day018.json  Day018.txt  Day019.json  Day019.txt  Day020.json  Day020.txt  (+14 more)
state/: progress.yaml
