[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "knowledge-os"
version = "0.1.0"
description = "Daily AI-powered learning system"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "PyYAML>=6.0"
]

[tool.setuptools]
packages = ["knowledge_os"]